Fix highlighted card not resetting when adding new card

--- a/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
+++ b/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
@@ -25,6 +25,7 @@
 
 <app-planning-participant-voting-state-card
   [availableCards]="availableCards"
+  [selectedCard]="ticketVote?.selectedCard"
   (didTapPlanningCard)="onClickVote($event)"
   *ngIf="isVotingState"
 ></app-planning-participant-voting-state-card>
