Add displaying user connections status

--- a/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
+++ b/src/app/planning/shared/planning-participant-row/planning-participant-row.component.html
@@ -1,19 +1,36 @@
-<mat-list-option [value]="participant!.participantId" [ngClass]="{ 'highlighted-participant-row': participant!.highlighted }">
-  <mat-icon mat-list-icon>account_circle</mat-icon>
+<mat-list-option
+  [value]="participant!.participantId"
+  [ngClass]="{ 'highlighted-participant-row': participant!.highlighted }"
+>
+  <mat-icon
+    mat-list-icon
+    [ngStyle]="{ color: participant!.connected ? 'green' : 'red' }"
+    >account_circle</mat-icon
+  >
   <mat-icon mat-list-icon *ngIf="showDownArrowIcon">arrow_drop_down</mat-icon>
-  
-  <p class="left-align" style="flex-grow: inherit;">
-    {{participant?.name}}
+
+  <p class="left-align" style="flex-grow: inherit">
+    {{ participant?.name }}
   </p>
 
   <div class="right-align">
     <mat-icon mat-icon-button *ngIf="isVotingState">
-      {{votingIcon(participant!.participantId)}}
+      {{ votingIcon(participant!.participantId) }}
     </mat-icon>
-    <div mat-icon-button *ngIf="isFinishedVotingState && votingValue(participant!.participantId) != null">
-      {{votingValue(participant!.participantId)}}
+    <div
+      mat-icon-button
+      *ngIf="
+        isFinishedVotingState && votingValue(participant!.participantId) != null
+      "
+    >
+      {{ votingValue(participant!.participantId) }}
     </div>
-    <mat-icon mat-icon-button *ngIf="isFinishedVotingState && votingValue(participant!.participantId) == null">
+    <mat-icon
+      mat-icon-button
+      *ngIf="
+        isFinishedVotingState && votingValue(participant!.participantId) == null
+      "
+    >
       shortcut
     </mat-icon>
   </div>
