--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,11 @@ mat-card-content h2 {
     border-radius: 10px;
     margin: -5px;
 }
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+    background-color: #A288E3;
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+    background-color: #A288E38A;
+}
