Enhance error state screen

--- a/src/app/planning/host/planning-host-landing/planning-host-landing.component.html
+++ b/src/app/planning/host/planning-host-landing/planning-host-landing.component.html
@@ -29,6 +29,9 @@
 
 <app-planning-error-state-card
   [sessionName]="sessionName"
+  [errorCode]="errorCode"
+  [errorDescription]="errorDescription"
+  (didTapReconnect)="tryReconnect()"
   *ngIf="isErrorState"
 ></app-planning-error-state-card>
 
