--- a/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
+++ b/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
@@ -32,6 +32,9 @@
 
 <app-planning-error-state-card
   [sessionName]="sessionName"
+  [errorCode]="errorCode"
+  [errorDescription]="errorDescription"
+  (didTapReconnect)="tryReconnect()"
   *ngIf="isErrorState"
 ></app-planning-error-state-card>
 
