Fix padding when screen is smaller

--- a/src/app/planning/host/planning-host-landing/planning-host-landing.component.html
+++ b/src/app/planning/host/planning-host-landing/planning-host-landing.component.html
@@ -51,3 +51,5 @@
   *ngIf="isNoneState || isVotingState || isFinishedVotingState"
 >
 </app-planning-host-participants-card>
+
+<div style="height: 20px;"></div>
