--- a/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
+++ b/src/app/planning/participant/planning-participant-landing/planning-participant-landing.component.html
@@ -68,3 +68,5 @@
   *ngIf="isNoneState || isVotingState || isFinishedVotingState"
 >
 </app-planning-participant-participants-card>
+
+<div style="height: 20px;"></div>
