--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,14 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body::after {
+    padding-bottom: 20px;
+}
 
 .product-card {
     max-width: 1000px;
@@ -11,6 +18,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
 }
+
+ @media only screen and (max-width: 1100px) {
+    .product-card  {
+        margin: 20px 20px;
+    }
+ }
 
 .product-card mat-card-title {
     color: #A288E3;
